@@ -41,6 +41,12 @@ implementation 'io.evitadb:evita_java_driver:2026.1.0'
 </CodeTabsBlock>
 </CodeTabs>
 
+<Note type="info">
+The driver is compiled for Java 17 and runs on Java 17 or newer; the same holds for the
+`evita_java_driver_all_in_one` artifact that bundles all of its dependencies. The evitaDB server itself
+requires Java 21, but the client application does not have to run on the server's Java version.
+</Note>
+
 Java remote client builds on top of the [gRPC API](./grpc.md). The <SourceClass>evita_external_api/evita_external_api_grpc/client/src/main/java/io/evitadb/driver/EvitaClient.java</SourceClass>
 is thread safe and only single instance of it is expected to be used in the application. The client internally manages
 a pool of gRPC connections to handle parallel communication with the server.
@@ -355,6 +361,31 @@ The above intervals are not currently configurable because we believe they are o
 to change them, please contact us with your specific use case and we will consider adding the configuration option.
 
 </Note>
+
+## SIMD bitmap kernels
+
+When evitaDB runs embedded, its bitmap indexes compute the population-count and boolean kernels behind every
+intersection, union and difference of two dense bitmaps as SIMD instructions, provided the JDK's incubating
+[Vector API](https://openjdk.org/jeps/448) is resolvable. It is never resolved by default, so an embedded application
+that wants those kernels starts its JVM with:
+
+```shell
+--add-modules jdk.incubator.vector
+```
+
+The JVM answers with a single `WARNING: Using incubator modules: jdk.incubator.vector` line, which is how it announces
+any incubating module.
+
+The module is optional. Where it is absent, where the CPU offers vector registers narrower than 256 bits, or where the
+JVM runs without an optimizing JIT compiler, the same arithmetic is computed by scalar code that produces identical
+results. evitaDB writes one line at startup naming the implementation in force and the reason for it:
+
+```
+roaring vector kernels: bitmap=vector(512-bit) array=scalar (bitmap: jdk.incubator.vector present, JIT compiler available, self-test passed; array: no usable vector implementation)
+```
+
+Setting `-Devita.roaring.vector=false` selects the scalar kernels whatever the runtime offers, which is useful when
+comparing the two.
 
 ## Custom contracts
 
